Pulling external Crypto library

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,12 @@
 platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
-
-; change microcontroller
 board_build.mcu = esp32
-
-; change MCU frequency
 board_build.f_cpu = 240000000L
-
 upload_protocol = esptool
 
 lib_deps =
     https://github.com/rpoisel/arduino-LoRa#callback_context
     https://github.com/knolleary/pubsubclient
+extra_scripts = pre:get_libs.py
+lib_extra_dirs = extlib/Crypto/libraries
