Using RadioHead library

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ board_build.f_cpu = 240000000L
 upload_protocol = esptool
 
 lib_deps =
-    https://github.com/rpoisel/arduino-LoRa#callback_context
+    RadioHead
     https://github.com/knolleary/pubsubclient
 extra_scripts = pre:get_libs.py
 lib_extra_dirs = extlib/Crypto/libraries
