Heltec WiFi LoRa 32 (V2) port

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ttgo-lora32-v1]
+[env]
+lib_deps =
+    RadioHead
+    https://github.com/knolleary/pubsubclient
+extra_scripts = pre:get_libs.py
+lib_extra_dirs = extlib/Crypto/libraries
+
+[env:heltec_wifi_lora_32_V1]
 platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
@@ -16,8 +23,10 @@ board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 upload_protocol = esptool
 
-lib_deps =
-    RadioHead
-    https://github.com/knolleary/pubsubclient
-extra_scripts = pre:get_libs.py
-lib_extra_dirs = extlib/Crypto/libraries
+[env:heltec_wifi_lora_32_V2]
+platform = espressif32
+board = heltec_wifi_lora_32_V2
+framework = arduino
+board_build.mcu = esp32
+board_build.f_cpu = 240000000L
+upload_protocol = esptool
